[tool.poetry]
name = "beancount-dkb"
version = "0.17.0"
description = "Beancount Importer for DKB CSV exports"
readme = "README.md"
authors = ["Siddhant Goel <me@sgoel.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
include = ["README.md", "LICENSE.txt"]
repository = "https://github.com/siddhantgoel/beancount-dkb"
keywords = ["banking", "beancount", "cli-accounting", "finance"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
beancount = "^2.3"
flake8 = "^5.0"
isort = "^5.13"
pytest = "^7.4"
black = "^23.11"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"

[tool.taskipy.tasks]
fmt = "black beancount_dkb/ tests/"

lint-black  = "black --check beancount_dkb/ tests/"
lint-flake8 = "flake8 beancount_dkb/ tests/"
lint = "task lint-black && task lint-flake8"

test-pytest = "pytest tests/"
test = "task test-pytest"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

